<resources>
    <string name="app_name">Tsuga</string>

    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="attention_error_title">Attention!</string>
    <string name="comment_hint">Comment</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Deleted</string>
    <string name="email_hint">Email</string>
    <string name="empty_favorites_label">No Favorites Saved</string>
    <string name="empty_friends_label">No Friends Selected</string>
    <string name="empty_inbox_label">Please start by selecting users to follow from the overflow menu.</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="event_hint">Activity</string>
    <string name="follow_user_button">Follow</string>
    <string name="forgot_password_submit">Click to Reset Your Password</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="list_title_event">Event: </string>
    <string name="list_title_location">Location: </string>
    <string name="list_title_submitter">Submitted By: </string>
    <string name="locate_button">Locate</string>
    <string name="location_hint">Type in location or click map</string>
    <string name="login_button">Sign In</string>
    <string name="login_button_label">Login</string>
    <string name="Login_error_message">Please make sure you enter a username, password!</string>
    <string name="Login_error_title">Attention!</string>
    <string name="login_quote">“If you don\’t do it this year, you will be one year older when you do.” – Warren Miller</string>
    <string name="menu_all_users_label">All Users</string>
    <string name="menu_camera_label">Camera</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="menu_favorites_label">Favorites</string>
    <string name="menu_post_label">Share your adventure</string>
    <string name="menu_user_info">User Settings</string>
    <string name="no_connection">No Internet Connection Available!</string>
    <string name="ok_button">OK</string>
    <string name="password_hint">Password</string>
    <string name="person_location_hint">Location</string>
    <string name="person_name_hint">Name</string>
    <string name="post_confirmation">Posted</string>
    <string name="post_event_button">Post</string>
    <string name="posting_error_message">There was a problem posting</string>
    <string name="reset_error_message">Please make sure you enter your E-mail</string>
    <string name="reset_error_sending_message">There was an error, please try again.</string>
    <string name="reset_error_title">Attention!</string>
    <string name="save">Save</string>
    <string name="save_error_message">There was an error saving</string>
    <string name="saved_confirmation">Saved</string>
    <string name="search_friends_label">Search For Users</string>
    <string name="search_title">Search For Users</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="sign_up_error_message">Please make sure all fields are complete and a picture has been uploaded.</string>
    <string name="sign_up_error_title">Attention!</string>
    <string name="signup_text">Signup</string>
    <string name="signup_wait">This will take a minute. Please wait.</string>
    <string name="stop_following_user_button">Stop Following</string>
    <string name="submitted_by">By:</string>
    <string name="title_activity_all_users">All Users</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="title_activity_event_detail">Event</string>
    <string name="title_activity_event_map">Map</string>
    <string name="title_activity_favorite_event_detail">FavoriteEventDetail</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_find_friends">Find</string>
    <string name="title_activity_forgot_password">Reset Password</string>
    <string name="title_activity_friend_detail">FriendDetailActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_places">Location</string>
    <string name="title_activity_post">Share your adventure</string>
    <string name="title_activity_post_help">How to Post</string>
    <string name="title_activity_search_friends">Search for users</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_sign_up">Sign Up!</string>
    <string name="title_activity_street_view">Street View</string>
    <string name="title_activity_user_data"></string>
    <string name="title_section1">Inbox</string>
    <string name="user_picture">User Picture</string>
    <string name="username_hint">Username</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>


</resources>
