<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity"
    >

    <item
        android:id="@+id/action_post_event"
        android:icon="@drawable/ic_create_black_24dp"
        app:showAsAction="always"
        android:title="@string/menu_post_label">
    </item>

    <item
        android:id="@+id/action_favorite_event"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_favorites_label">
    </item>


    <item
        android:id="@+id/action_search_friends"
        android:title="@string/search_friends_label"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_edit_friends"
        android:title="@string/menu_edit_friends_label"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_all_users"
        android:title="@string/menu_all_users_label"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_user_info"
        android:title="@string/menu_user_info"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never">
    </item>

</menu>
