<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    tools:context="life.tsuga.tsuga.LoginActivity"
    android:background="#ffff6311">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="life.tsuga.tsuga.LoginActivity"
        android:id="@+id/activity_login"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="60dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:typeface="serif"/>

        <TextView
            android:id="@+id/quoteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Title"
            android:textSize="15dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/login_quote"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:typeface="serif"/>

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quoteTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/username_hint"
            android:imeOptions="actionNext"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_below="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <Button
            android:id="@+id/loginButton"
            android:textSize="30sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/buttoncustomlarge"
            android:text="@string/login_button"
            android:layout_below="@+id/passwordField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginButton"
                android:layout_centerHorizontal="true"
                android:layout_margin="12dp"
                android:id="@+id/linearLayout">

                <TextView
                    android:id="@+id/signUpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="50dp"
                    android:text="@string/signup_text"/>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/forgot_password_text"
                    />

            </LinearLayout>
    </RelativeLayout>
</RelativeLayout>

