<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    tools:context="life.tsuga.tsuga.SignUpActivity"
    android:background="#ffff6311">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    tools:context="life.tsuga.tsuga.SignUpActivity">

                    <ImageView
                        android:id="@+id/userPictureView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginLeft="4dp"
                        android:adjustViewBounds="true"/>

                    <EditText
                        android:id="@+id/usernameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/userPictureView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:hint="@string/username_hint"
                        android:imeOptions="actionNext"/>

                    <EditText
                        android:id="@+id/passwordField"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_below="@+id/usernameField"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionNext"/>

                    <EditText
                        android:id="@+id/emailField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:layout_below="@+id/passwordField"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:hint="@string/email_hint"
                        android:imeOptions="actionNext"/>

                    <EditText
                        android:id="@+id/personNameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/person_name_hint"
                        android:ems="10"
                        android:layout_below="@+id/emailField"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:imeOptions="actionNext"/>

                    <EditText
                        android:id="@+id/locationField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:layout_below="@+id/personNameField"
                        android:hint="@string/person_location_hint"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:imeOptions="actionDone"
                        android:layout_marginBottom="25dp"/>

                    <Button
                        android:id="@+id/userPictureButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttoncustomlarge"
                        android:textSize="30sp"
                        android:text="@string/user_picture"
                        android:layout_below="@+id/locationField"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="25dp"/>

                    <Button
                        android:id="@+id/signupButton"
                        android:textSize="30sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttoncustomlarge"
                        android:text="@string/sign_up_button_label"
                        android:layout_below="@+id/locationField"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="75dp"/>

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>

