<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="2dp"
    android:paddingTop="2dp"
    tools:context="life.tsuga.tsuga.UserData"
    android:background="#ffff6311">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context="life.tsuga.tsuga.UserData">

                    <ImageView
                        android:id="@+id/userPictureView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginLeft="4dp"
                        android:adjustViewBounds="true"/>

                    <TextView
                        android:id="@+id/usernameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@id/userPictureView"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:hint="@string/username_hint"/>

                    <EditText
                        android:id="@+id/personNameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/person_name_hint"
                        android:ems="10"
                        android:layout_below="@+id/usernameField"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/locationField"/>

                    <EditText
                        android:id="@+id/locationField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_below="@+id/personNameField"
                        android:layout_marginTop="20dp"
                        android:hint="@string/person_location_hint"
                        android:layout_centerHorizontal="true"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/emailField"/>

                    <EditText
                        android:id="@+id/emailField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:layout_below="@+id/locationField"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/email_hint"
                        android:imeOptions="actionDone"/>

                    <Button
                        android:id="@+id/userPictureButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttoncustommedium"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="20dp"
                        android:textSize="22sp"
                        android:text="@string/user_picture"
                        android:layout_below="@+id/emailField"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"/>

                    <Button
                        android:id="@+id/saveDataButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttoncustommedium"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:textSize="22sp"
                        android:text="@string/save"
                        android:layout_below="@+id/userPictureButton"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="10dp"/>

                    <ProgressBar
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBar"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
