<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                tools:context="life.tsuga.tsuga.PostActivity"
                android:background="#ffff6311">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    tools:context="life.tsuga.tsuga.PostActivity">

                    <ImageView
                        android:id="@+id/postImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="2dp"/>

                    <Button
                        android:id="@+id/mapbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/locate_button"
                        android:background="@drawable/buttoncustomsmall"
                        android:textSize="20sp"
                        android:layout_below="@+id/postImage"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:singleLine="true"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="10dp"/>

                    <EditText
                        android:id="@+id/locationField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_hint"
                        android:layout_below="@+id/postImage"
                        android:layout_toRightOf="@+id/mapbutton"
                        android:imeOptions="actionNext"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/eventField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_hint"
                        android:layout_below="@+id/mapbutton"
                        android:imeOptions="actionNext"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/commentField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/comment_hint"
                        android:layout_below="@+id/eventField"
                        android:imeOptions="actionDone"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="50dp"/>

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/attributesView"
        android:background="@drawable/powered_by_google_light"
        android:layout_marginLeft="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>